--- a/public/index.html
+++ b/public/index.html
@@ -16,12 +16,11 @@
 
 <body>
     <!-- Main HTML body here -->
-    <h1>Title</h1>
-    Content
+<!--    <svg width="100%" max-height="80%" viewBox="0 0 100 100"/>-->
 
     <!-- Use the following code during development -->
-    <script src="../jspm_packages/system.js"></script>
-    <script src="../config.js"></script>
+    <script src="./lib/system.js"></script>
+    <script src="./config.js"></script>
     <script>
         System.import('./js/main.js');
     </script>
